
(env
 (skip
  (flags (-dsource))
))
  
;; Don't build tests automatically
(vendored_dirs tests)

(library
 (public_name ppx_mina_introspector )
 (name ppx_mina_introspector )
 (preprocess (staged_pps ppx_import ppx_yojson_conv ))
 (kind ppx_deriver)
 (libraries
   ;; opam libraries
   ppxlib
   base
   yojson
   ppx_import
   ppx_yojson_conv   
	)
 
 )
